# ais_interpreter

./: .clang-format  CMakeLists.txt  Doxyfile  Doxygen.cfg  README.md  input.txt
Presentazione/: Presentazione.aux  Presentazione.nav  Presentazione.out  Presentazione.tex  Presentazione.toc  Presentazione.vrb
Relazione/: Relazione-frn.tex  Relazione.aux  Relazione.out  Relazione.tex  Relazione.toc
include/: AbstractInterval.hpp  Bound.hpp  FloatingPointAbstractInterval.hpp  Infinity.hpp  IntegerAbstractInterval.hpp  UndefinedOperationException.hpp
libs/catch2/: catch.hpp
src/: AbstractInterval.cpp  Bound.cpp  FloatingPointAbstractInterval.cpp  Infinity.cpp  IntegerAbstractInterval.cpp  Interpreter.cpp
tests/: BoundTest.cpp  FloatingPointIntervalTest.cpp  InfinityTest.cpp  IntegerIntervalTest.cpp
